Adding login page empty file

--- a/templates/SignUpOrLogin.html
+++ b/templates/SignUpOrLogin.html
@@ -1,7 +1,14 @@
 {% extends 'root.html' %}
 
 {% block content %}
+<div>
+    
+</div>
 <div class="SelectInstitutionDiv">
     <a href="InstitutionList.html" class="SelectInstitutionButton">--Select your Institution--</a>
+</div>
+<div class="EduEmailDiv">
+    <p><a href="EduEmailLogin.html" >Continue with your .edu email</a></p>
+    <p class="">Already have an account? <a href="LoginPage.html">Login</a></p>
 </div>
 {% endblock %}
