--- a/static/loginstyling.css
+++ b/static/loginstyling.css
@@ -1,3 +1,4 @@
+/* Login or Sign up styling */
 .SelectInstitutionDiv {
     position: absolute;
     top: 80%; 
@@ -19,3 +20,14 @@
     cursor: pointer;
     font-size: 16px;
 }
+
+.EduEmailDiv {
+    text-decoration: none;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 18px;
+}
+
+/* Login styling */
